- Criado o comando `/fazendinha feira administrar`, que é um atalho para administrar a feira, disponível no `/fazendinha administrar`.
- Criado o comando `/fazendinha feira trocas`: faça troca de plantas na feira por estrelinhas e/ou fertilizantes. 
- Agora é possível atualizar o valor de um item anunciado na feira no `/fazendinha administrar` - Sugerido por @start_0

## Changed

- Ajustado os pesos minimos e máximos de plantações da fazendinha.
- A `/loja vender plantas` foi atualizada para os novos componentes V2 do Discord! Agora também é possível vender diferentes qualidades de plantas.
- O `/fazendinha plantações` foi atualizado para os novos componentes V2 do Discord. Agora também é possível plantar e colher todos os campos ao mesmo tempo - Sugerido por @mareys.
- O `/fazendinha silo` foi atualizado para os novos componentes V2 do Discord.
- O `/fazendinha entregas` foi atualizado para os novos componentes V2 do Discord.
- O `/fazendinha feira comprar` foi atualizado para os novos componentes V2 do Discord.
- O `/loja comprar sementes` foi atualizado para os novos componentes V2 do Discord.
- O `/cooldowns` foi atualizado para os novos componentes V2 do Discord.
- O `/transações` foi atualizado para os novos componentes V2 do Discord.
- O `/notificações` foi atualizado para os novos componetnes V2 do Discord.
- A planta `Tomate` foi renomeada para `Feijão`.
- A planta `Banana` foi renomeada para `Cebola`.
- A planta `Limão` foi renomeada para `Mirtilo`. 
- A planta `Melancia` foi renomeada para `Limão`.
- As plantas `Morango` e `Maçã` tiveram suas posições de raridade alteradas.
- Facilitado o uso do `/fazendinha feira anunciar`, removendo a necessidade de usar acentos para buscar por platnas.
- A punição de inatividade agora começa após 60 dias, antes era 14.

## Fixed

- Corrigido os itens mágicos ainda aparecerem na loja para serem comprados, mesmo já tendo eles - Reportado por @mareys.